<resources>
    <string name="app_name" translatable="false">SAVARE</string>
    <string name="sync_account_type">sync.savare.com</string>
    <string name="content_authority">com.savare.sync.contaautenticador</string>
    <string name="pref_setup_complete">setup_complete</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuário</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_dados_cliente">Enviar Dados Cliente</string>
    <string name="adicionar_produto">Adicionar Produtos</string>
    <string name="adicionar_servidor">Adicionar Servidor</string>
    <string name="sobre_savare">Sobre o SAVARE</string>
    <string name="atualizar">Atualizar</string>
    <string name="voltar">Voltar</string>
    <string name="chave_empresa">Chave da Empresa</string>
    <string name="chave_usuario">Chave do Usuário</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="descricao">Descrição</string>
    <string name="aviso">Avisos</string>
    <string name="nome_login">Nome de Login</string>
    <string name="senha">Senha</string>
    <string name="email">E-Mail</string>
    <string name="embalagem">Embalagem</string>
    <string name="ip_servidor_sisinfo">IP Servidor SisInfo</string>
    <string name="senha_servidor_sisinfo">Senha do Servidor SisInfo</string>
    <string name="nome_servidor">Nome do Servidor</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtrar">Filtrar</string>
    <string name="idClifo">Código</string>
    <string name="codigo_empresa">Código da Empresa</string>
    <string name="id_empresa">ID da Empresa: </string>
    <string name="referencia">Referência</string>
    <string name="usuario_servidor_sisinfo">Usuário do Servidor SisInfo</string>
    <string name="codigo_vendedor">Código do Vendedor</string>
    <string name="tipo_funcionario">Tipo de Funcionário</string>
    <string name="drawer_open">Navegação drawer aberta</string>
    <string name="drawer_close">Navegação drawer fechada</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="status">Status</string>
    <string name="data">Data</string>
    <string name="fisica">Física</string>
    <string name="juridica">Juridica</string>
    <string name="razao_social">Razão Social</string>
    <string name="fantasia">Fantasia</string>
    <string name="cidade">Cidade</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="estado">Estado</string>
    <string name="endereco">Endereço</string>
    <string name="complemento">Complemento</string>
    <string name="data_ultimo_envio">Data Ultimo Envio</string>
    <string name="data_ultimo_recebimento">Data Ultimo Recebimento</string>
    <string name="receber_todos_dados">Receber Todos os Dados</string>
    <string name="receber_dados_empresa">Receber Dados da Empresa</string>
    <string name="receber_dados_clientes">Receber Dados dos Clientes</string>
    <string name="receber_dados_produto">Receber Dados dos Produtos</string>
    <string name="receber_dados_titulos">Receber Dados dos Títulos</string>
    <string name="credito_acumulado">Credito Acumulado</string>
    <string name="credito_acumulado_atacado">Credito Acumulado Atacado</string>
    <string name="pontos_acumulados">Pontos Acumulados</string>
    <string name="capital_social">Capital Social</string>
    <string name="limite_compras">Limite de Compras</string>
    <string name="total_comprado">Total Comprado</string>
    <string name="total_vencido">Total Vencido</string>
    <string name="total_pago">Total Pago</string>
    <string name="total_a_receber">Total A Receber</string>
    <string name="contato">Contato</string>
    <string name="ramo_atividade">Ramo de Atividade</string>
    <string name="tipo_cliente">Tipo de Cliente</string>
    <string name="cnpj_cpf">CNPJ/CPF</string>
    <string name="incricao_estadual">Inscrição Estadual</string>
    <string name="ultima_venda">Última Venda</string>
    <string name="pesquisar_cliente">Pesquisar Cliente</string>
    <string name="esqueceu_senha">Esqueceu a senha</string>
    <string name="configuracao">Configuração</string>
    <string name="configuracoes">Configurações</string>
    <string name="ultimas_atualizacoes">Últimas Atualizações</string>
    <string name="cadastro_usuario">Cadastro Usuário</string>
    <string name="configuracoes_servidores">Configuração dos Servidor</string>
    <string name="cadastro_sucesso">Cadastro Sucesso</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="tamanho_texto">Tamanho do Texto</string>
    <string name="enviar_automatico">Enviar Automático</string>
    <string name="enviar_instantaneamente">Enviar Instantâneamente</string>
    <string name="receber_automatico">Receber Automático</string>
    <string name="quantidade_casas_decimais">Quantidade de Casas Decimais</string>
    <string name="percentual_mark_up_atacado">% Mark Up Atacado</string>
    <string name="percentual_mark_up_varejo">% Mark Up Varejo</string>
    <string name="numero">Numero</string>
    <string name="opcoes">Opções</string>
    <string name="novo_orcamento">Novo Oçamento</string>
    <string name="novo_cliente">Novo Cliente</string>
    <string name="filtro">Filtro</string>
    <string name="lista_creditos">Lista de Creditos</string>
    <string name="titulos_baixados">Títulos Baixados</string>
    <string name="todos_titulos">Todos os Títulos</string>
    <string name="titulos_aberto">Títulos Em Aberto</string>
    <string name="titulos_vencidos">Títulos Vencidos</string>
    <string name="titulos_cliente">Títulos do Cliente</string>
    <string name="grafico_historico_venda">Gráfico Historico de Venda</string>
    <string name="rateio_preco">Rateio de Preço</string>
    <string name="filtrar_periodo">Filtrar Por Período</string>
    <string name="periodo_vencimento">Período de Vencimento</string>
    <string name="ordem_decrescente">Ordem Decrescente</string>
    <string name="somente_enviados">Somente Enviados</string>
    <string name="nao_enviados">Não Enviados</string>
    <string name="todos_pedidos">Todos os Pedidos</string>
    <string name="ordem_crescente">Ordem Crescente</string>
    <string name="deletar">Deletar</string>
    <string name="duplicar">Duplicar</string>
    <string name="detalhes_produto">Detalhes Produto</string>
    <string name="transformar_pedido">Transformar em Pedido</string>
    <string name="trocar_cliente">Trocar Cliente</string>
    <string name="plano_pagamento">Plano de Pagamento</string>
    <string name="enviar_email">Enviar e-Mail</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="abrir_pdf">Abrir PDF</string>
    <string name="visualizar_logs">Visualizar logs</string>
    <string name="enviar_dados_nuvem">Enviar dados para Nuvem</string>
    <string name="enviar_todos_pedidos_nuvem">Enviar Todos os Pedidos para Nuvem</string>
    <string name="observacao">Observação</string>
    <string name="total">Total</string>
    <string name="total_bruto">Total Bruto</string>
    <string name="total_liquido">Total Líquido</string>
    <string name="valor_desconto">Valor Desconto</string>
    <string name="unitario_liquido">Unitário Líquido</string>
    <string name="unitario">Unitário</string>
    <string name="unidade">Unidade</string>
    <string name="ultimo_preco">Ultimo Preço</string>
    <string name="valor_unitario">Valor Unitário</string>
    <string name="sequencial">Sequêncial</string>
    <string name="codigo_unico">Código Único</string>
    <string name="estoque">Estoque </string>
    <string name="tabela_preco">Tabela de Preço</string>
    <string name="quantidade">Quantidade</string>
    <string name="quantidade_invalida">Quantidade invalida</string>
    <string name="desconto">Desconto</string>
    <string name="ultima_visita">Última Visita</string>
    <string name="desconto_atacado_vista">Desc. Atacado Vista</string>
    <string name="desconto_atacado_prazo">Desc. Atacado Prazo</string>
    <string name="desconto_varejo_vista">Desc. Varejo Vista</string>
    <string name="desconto_varejo_prazo">Desc. Varejo Prazo</string>
    <string name="desconto_percentual">Desconto (%)</string>
    <string name="atacado_varejo">Atacado/Varejo</string>
    <string name="aplicar">Aplicar</string>
    <string name="fechar_orcamento">Fechar Orçamento</string>
    <string name="desconto_maximo">Desc. Máximo</string>
    <string name="restaurar_orcamento">Restaurar em Orçamento</string>
    <string name="sistema_auxiliar_venda_atacado_varejo">Sistema Auxiliar de Vendas no Atacado e vaREjo</string>
    <string name="ddd">DDD</string>
    <string name="numero_telefone">Nº Telefone</string>
    <string name="tipo_acumulo_atacado">Tipo de Acúmulo Atacado</string>
    <string name="valor_acumulado_atacado">Valor Acumulado Atacado</string>
    <string name="prazo_acumulo_atacado">Prazo para Acumulo Atacado</string>
    <string name="tipo_acumulo_varejo">Tipo de Acúmulo Varejo</string>
    <string name="valor_acumulado_varejo">Valor Acumulado Varejo</string>
    <string name="prazo_acumulo_varejo">Prazo para Acumulo Varejo</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="pasta_ftp">Pasta do Servidor FTP</string>
    <string name="ftp_modo_ativo">FTP Modo Ativo</string>
    <string name="ftp_modo_passivo">FTP Modo Passivo</string>
    <string name="segundo_plano">Segundo Plano</string>
    <string name="prazo_desconhecido">Prazo Desconhecido</string>
    <string name="desconhecido">Desconhecido</string>
    <string name="parece_que_tem_internet_vamos_pegar_dados_agora">Parece que tem internet, agora vamos pegar os dados à serem enviados.</string>
    <string name="aguarde_estamos_checando_se_existe_internet">Aguarde, estamos checando se existe internet...</string>
    <string name="aguarde_estamos_pegando_lista_servidores">Aguarde, estamos pegando a lista de servidores...</string>
    <string name="achamos_orcamento_numero">Achamos o orçamento de Nº </string>
    <string name="agora_estamos_pegando_produtos_orcamento_numero">Agora estamos pegando os produtos do orçamento de Nº </string>
    <string name="desmarcar_transmissao_dados">Desmarcar as transmissões de dados</string>
    <string name="zerar_datas_sincronizacao">Zerar datas de sincronização</string>
    <string name="limpar_historico">Limpar Histórico</string>
    <string name="produto_com_estoque">Só Produtos Com Estoque</string>
    <string name="webservice">WebService</string>
    <string name="ip_servidor_webservice">IP Servidor WebService</string>
    <string name="caminho_banco_dados">Caminho do Banco de Dados</string>
    <string name="porta_banco_dados">Porta do Banco de Dados</string>
    <string name="limpar_campos">Limpar Campos</string>
    <string name="receber_dados_pedido_servidor_web">Receber Dados Servidor Web</string>
    <string name="apenas_produtos_novos">Apenas Produtos Novos</string>
    <string name="produtos_promocao">Produtos Em Promoção</string>
    <string name="produtos_sem_estoque">Inclui Produtos Sem Estoque</string>
    <string name="legenda">Legenda</string>
    <string name="semana_atual">Semana Atual</string>
    <string name="semana_anterior">Semana Anterior</string>
    <string name="mes_atual">Mês Atual</string>
    <string name="mes_anterior">Mês Anterior</string>
    <string name="intervalo_personalizado">Intervalo Personalizado</string>
</resources>