<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
  
     <item android:id="@+id/menu_lista_titulos_filtro"
          android:orderInCategory="100"
          android:title="@string/filtro"
          app:showAsAction="ifRoom"
     >
        <!-- submenu -->
        <menu>
            <item android:id="@+id/menu_lista_titulos_aberto"
                  android:title="@string/titulos_aberto"
                  />
            <item android:id="@+id/menu_lista_titulos_baixados"
                  android:title="@string/titulos_baixados" />
            
            <item android:id="@+id/menu_lista_titulos_vencidos"
                  android:title="@string/titulos_vencidos" />
            
            <item android:id="@+id/menu_lista_titulos_credito"
                  android:title="@string/credito_acumulado" />
            <item
                android:id="@+id/menu_lista_titulos_filtrar_periodo"
                android:title="@string/periodo_vencimento">
            </item>

        </menu>
    </item>

    <item
        android:id="@+id/menu_lista_titulos_search_pesquisar"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_magnify_dark"
        android:title="@string/pesquisar"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
     
</menu>
