<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

     <!-- Search Widget -->
    <item
        android:id="@+id/menu_orcamento_fragment_pesquisa"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="0"
        android:title="@string/pesquisar"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    
    <item
        android:id="@+id/menu_orcamento_fragment_adicionar"
        android:orderInCategory="1"
        android:title="@string/adicionar_produto"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="always">
    </item>
    
    <item
        android:id="@+id/menu_orcamento_fragment_atualizar"
        android:orderInCategory="2"
        android:title="@string/atualizar"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/menu_orcamento_fragment_enviar_email"
        android:orderInCategory="3"
        android:title="@string/enviar_email"
        android:icon="@drawable/ic_share_variant"
        app:showAsAction="always">
    </item>
    
    <item
        android:id="@+id/menu_orcamento_fragment_salvar"
        android:orderInCategory="4"
        android:title="@string/salvar"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always">
    </item>

    
    
    <item
        android:id="@+id/menu_orcamento_fragment_rateio_preco"
        android:orderInCategory="101"
        android:title="@string/rateio_preco"
        app:showAsAction="never">
    </item>
    
    <item
        android:id="@+id/menu_orcamento_fragment_transformar_pedido"
        android:orderInCategory="104"
        android:title="@string/transformar_pedido"
        app:showAsAction="never">
    </item>
    
    <item
        android:id="@+id/menu_orcamento_fragment_trocar_cliente"
        android:orderInCategory="105"
        android:title="@string/trocar_cliente"
        app:showAsAction="never">
    </item>
    
    <item
        android:id="@+id/menu_orcamento_fragment_visualizar_logs"
        android:orderInCategory="999"
        android:title="@string/visualizar_logs"
        app:showAsAction="never">
    </item>
    
</menu>