<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_lista_orcamento_novo_orcamento"
        android:orderInCategory="1"
        android:title="@string/atualizar"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_new">
    </item>
    
    <item
        android:id="@+id/menu_lista_orcamento_atualizar"
        android:orderInCategory="99"
        android:title="@string/atualizar"
        android:icon="@drawable/ic_action_refresh">
    </item>   
    
    <item
        android:id="@+id/menu_lista_orcamento_rateio_preco"
        android:orderInCategory="100"
        android:title="@string/rateio_preco"
        android:showAsAction="never" >
    </item>
    
    <item
        android:id="@+id/menu_lista_orcamento_filtrar_periodo"
        android:orderInCategory="101"
        android:title="@string/filtrar_periodo"
        android:showAsAction="never" >
    </item>
    
    <item
        android:id="@+id/menu_lista_orcamento_ordem_crescente"
        android:orderInCategory="102"
        android:title="@string/ordem_crescente"
        android:showAsAction="never" >
    </item>
    
    <item
        android:id="@+id/menu_lista_orcamento_ordem_decrescente"
        android:orderInCategory="103"
        android:title="@string/ordem_decrescente"
        android:showAsAction="never" >
    </item>
    
    <item
        android:id="@+id/menu_lista_orcamento_somente_enviados"
        android:orderInCategory="104"
        android:title="@string/somente_enviados"
        android:showAsAction="never" >
    </item>
    
    <item
        android:id="@+id/menu_lista_orcamento_nao_enviados"
        android:orderInCategory="105"
        android:title="@string/nao_enviados"
        android:showAsAction="never" >
    </item>
    
    
    

</menu>
