<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_produto_lista_tab_md_search_pesquisar"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_magnify_dark"
        android:title="@string/pesquisar"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />


    <item
        android:id="@+id/menu_produto_lista_tab_md_search_action_delete"
        android:orderInCategory="102"
        android:icon="@mipmap/ic_delete_dark"
        android:title="@string/limpar_historico"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_produto_lista_tab_md_produtos_novos"
        android:orderInCategory="103"
        android:icon="@mipmap/ic_new_box"
        android:title="@string/apenas_produtos_novos"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_produto_lista_tab_md_produtos_promocao"
        android:orderInCategory="104"
        android:icon="@mipmap/ic_sale"
        android:title="@string/produtos_promocao"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_produto_lista_tab_md_produtos_sem_estoque"
        android:orderInCategory="104"
        android:icon="@mipmap/ic_feature_search"
        android:title="@string/produtos_sem_estoque"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_produto_lista_tab_md_produtos_com_estoque"
        android:orderInCategory="104"
        android:icon="@mipmap/ic_feature_search"
        android:title="@string/produto_com_estoque"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_produto_lista_tab_md_legenda"
        android:orderInCategory="900"
        android:icon="@mipmap/ic_map_legend"
        android:title="@string/legenda"
        app:showAsAction="never" />
</menu>