<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lista_orcamento_md_atualizar"
        android:orderInCategory="0"
        android:icon="@mipmap/ic_refresh_dark"
        android:title="@string/atualizar"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_lista_orcamento_md_filtrar_periodo"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_filter_dark"
        android:title="@string/filtrar_periodo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_lista_orcamento_md_ordem_crescente"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_sort_ascending_dark"
        android:title="@string/ordem_crescente"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_lista_orcamento_md_ordem_decrescente"
        android:orderInCategory="101"
        android:icon="@mipmap/ic_sort_descending_dark"
        android:title="@string/ordem_decrescente"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_lista_orcamento_md_sincronizar_web_service"
        android:orderInCategory="104"
        android:title="@string/receber_dados_pedido_servidor_web"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_lista_orcamento_md_enviar_todos_pedidos"
        android:orderInCategory="104"
        android:title="@string/enviar_todos_pedidos_nuvem"
        app:showAsAction="never" />

</menu>