<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/cadastro_usuario_edit_chave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/chave_empresa" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/cadastro_usuario_edit_codigo_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/codigo_empresa" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            android:hint="@string/nome_completo" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_codigo_vendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/codigo_vendedor"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapCharacters"
            android:hint="@string/nome_login" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/senha" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_ip_servidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ip_servidor" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_usuario_servidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usuario_servidor" />

        <EditText
            android:id="@+id/cadastro_usuario_edit_senha_servidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/senha_servidor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cadastro_usuario_edit_caminho_banco_dados"
            android:hint="@string/caminho_banco_dados"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cadastro_usuario_edit_porta_banco"
            android:hint="@string/porta_banco_dados"
            android:inputType="number"
            android:ems="10"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cadastro_usuario_edit_pasta_servidor"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pasta_ftp"
            android:text="/" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cadastro_usuario_edit_ip_servidor_webservice"
            android:hint="@string/ip_servidor_webservice"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="1">

            <RadioGroup
                android:id="@+id/activity_cadastro_usuario_radio_group_modo_conexao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/activity_cadastro_radioButton_modo_ativo"
                android:gravity="left"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/segundo_plano"
                    android:id="@+id/activity_cadastro_radioButton_segundo_plano"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ftp_modo_ativo"
                    android:id="@+id/activity_cadastro_radioButton_modo_ativo"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ftp_modo_passivo"
                    android:id="@+id/activity_cadastro_radioButton_modo_passivo"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/webservice"
                    android:id="@+id/activity_cadastro_radioButton_webservice" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
    

</ScrollView>
