<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sincronizacao_md_atualizar"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_refresh_dark"
        android:title="@string/atualizar"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sincronizacao_md_desmarcar_transmissao_dados"
        android:orderInCategory="100"
        android:title="@string/desmarcar_transmissao_dados"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sincronizacao_md_zerar_datas_sincronizacao"
        android:orderInCategory="101"
        android:title="@string/zerar_datas_sincronizacao"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sincronizacao_md_cadastro_servidor"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/configuracoes_servidores"/>


</menu>