<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_lista_orcamento_context_md_transformar_pedido"
        android:orderInCategory="0"
        android:icon="@mipmap/ic_transfer_dark"
        android:title="@string/transformar_pedido" />

    <item
        android:id="@+id/menu_lista_orcamento_context_md_deletar"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_delete_dark"
        android:title="@string/deletar" />

    <item
        android:id="@+id/menu_lista_orcamento_context_md_enviar_email"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_email_dark"
        android:title="@string/enviar_email" />


</menu>