<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_lista_pedido_context_md_enviar_pedido_nuvem"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_cloud_upload_dark"
        android:title="@string/enviar_pedido_nuvem"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_lista_pedido_context_md_enviar_email"
        android:orderInCategory="101"
        android:icon="@mipmap/ic_email_dark"
        android:title="@string/enviar_email"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_lista_pedido_context_md_deletar"
        android:orderInCategory="102"
        android:icon="@mipmap/ic_delete_dark"
        android:title="@string/deletar"
        android:showAsAction="never"/>

    <item
        android:id="@+id/menu_lista_pedido_context_md_duplicar"
        android:orderInCategory="103"
        android:title="@string/duplicar"
        android:showAsAction="never" />


</menu>